--- a/web/profiles/commerce_base/commerce_base.info.yml
+++ b/web/profiles/commerce_base/commerce_base.info.yml
@@ -3,6 +3,43 @@ type: profile
 description: Basic Drupal Commerce sites
 exclusive: 1
 dependencies:
+  # Standard
+  - node
+  - history
+  - block
+  - breakpoint
+  - ckeditor
+  - color
+  - config
+  - comment
+  - contextual
+  - contact
+  - menu_link_content
+  - datetime
+  - block_content
+  - quickedit
+  - editor
+  - help
+  - image
+  - menu_ui
+  - options
+  - path
+  - page_cache
+  - dynamic_page_cache
+  - taxonomy
+  - dblog
+  - search
+  - shortcut
+  - toolbar
+  - field_ui
+  - file
+  - rdf
+  - views
+  - views_ui
+  - tour
+  - automated_cron
+
+  # Commerce
   - entity
   - profile
   - inline_entity_form
