--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,10 @@ sudo: false
 env:
   global:
     - SIMPLETEST_DB=sqlite://tmp/site.sqlite
-    # - SIMPLETEST_BASE_URL=http://localhost:8080
+    - SIMPLETEST_BASE_URL="http://127.0.0.1:8080"
+  matrix:
+    - RELEASE=stable
+    - RELEASE=dev
 
 before_install:
   - echo 'sendmail_path = /bin/true' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
@@ -21,25 +24,15 @@ install:
   - composer --verbose install
 
 script:
-  # Test stable release
+  - if [[ $RELEASE = dev ]]; then composer --verbose require --no-update drupal/core:8.0.x-dev; fi;
+  - if [[ $RELEASE = dev ]]; then composer --verbose update; fi;
   - cd $TRAVIS_BUILD_DIR/web
   - ./../vendor/bin/drush site-install --verbose --yes --db-url=sqlite://tmp/site.sqlite
+  - ./../vendor/bin/drush runserver http://127.0.0.1:8080 &
+  - sleep 3
   # Skip core/tests/Drupal/Tests/ComposerIntegrationTest.php because web/ has no composer.json
   - ./../vendor/bin/phpunit -c core --exclude-group Composer
   - ./../vendor/bin/drush --version
   - ./../vendor/bin/drupal --version
   # Exit if the install profile didn't default.
   - ./../vendor/bin/drush status || grep -q "commerce_base" || exit 1;
-
-  # Test dev release
-  - cd $TRAVIS_BUILD_DIR
-  - composer --verbose require --no-update drupal/core:8.0.x-dev
-  - composer --verbose update
-  - cd $TRAVIS_BUILD_DIR/web
-  - ./../vendor/bin/drush site-install --verbose --yes --db-url=sqlite://tmp/site.sqlite
-  # Skip core/tests/Drupal/Tests/ComposerIntegrationTest.php because web/ has no composer.json
-  - ./../vendor/bin/phpunit -c core --exclude-group Composer
-  - ./../vendor/bin/drush --version
-  - ./../vendor/bin/drupal --version
-  # Exit if the install profile didn't default.
-  - drush status || grep -q "commerce_base" || exit 1;
