--- a/.travis.yml
+++ b/.travis.yml
@@ -27,12 +27,12 @@ script:
   - if [[ $RELEASE = dev ]]; then composer --verbose require --no-update drupal/core:8.0.x-dev; fi;
   - if [[ $RELEASE = dev ]]; then composer --verbose update; fi;
   - cd $TRAVIS_BUILD_DIR/web
-  - ./../vendor/bin/drush site-install --verbose --yes --db-url=sqlite://tmp/site.sqlite
-  - ./../vendor/bin/drush runserver http://127.0.0.1:8080 &
+  - ./../vendor/bin/drupal --version
+  - ./../vendor/bin/drupal init
+  - ./../vendor/bin/drupal site:install --db-type=sqlite --db-file=sites/default/files/.ht.sqlite --no-interaction
+  - ./../vendor/bin/drupal server 127.0.0.1:8080 &
   - sleep 3
   # Skip core/tests/Drupal/Tests/ComposerIntegrationTest.php because web/ has no composer.json
   - ./../vendor/bin/phpunit -c core --exclude-group Composer
-  - ./../vendor/bin/drush --version
-  - ./../vendor/bin/drupal --version
   # Exit if the install profile didn't default.
-  - ./../vendor/bin/drush status || grep -q "commerce_base" || exit 1;
+  - ./../vendor/bin/drupal site:status || grep -q "commerce_base" || exit 1;
