--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,6 @@
         "drupal-composer/drupal-scaffold": "~1",
         "cweagans/composer-patches": "~1.0",
         "drupal/core": "8.0.*",
-        "drush/drush": "~8.0",
         "drupal/console": "~0.10",
         "drupal/address": "8.1.x-dev",
         "drupal/entity": "8.1.x-dev",
@@ -57,8 +56,7 @@
             "web/core": ["type:drupal-core"],
             "web/modules/contrib/{$name}": ["type:drupal-module"],
             "web/profiles/contrib/{$name}": ["type:drupal-profile"],
-            "web/themes/contrib/{$name}": ["type:drupal-theme"],
-            "drush/contrib/{$name}": ["type:drupal-drush"]
+            "web/themes/contrib/{$name}": ["type:drupal-theme"]
         }
     }
 }
