--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "composer/installers": "^1.0.20",
         "drupal-composer/drupal-scaffold": "~1",
         "cweagans/composer-patches": "~1.0",
-        "drupal/core": "8.0.*",
+        "drupal/core": "8.0.x-dev",
         "drupal/console": "~0.10",
         "drupal/address": "8.1.x-dev",
         "drupal/entity": "8.1.x-dev",
