Add swiftmailer for HTML email
Allows the order receipt email to send in full HTML

--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "drupal/core": "~8.2.0",
         "drupal/console": "~1.0",
         "drupal/commerce": "2.x-dev",
+        "drupal/swiftmailer": "1.x-dev",
         "drupalcommerce/commerce_base": "dev-8.x-1.x"
     },
     "require-dev": {
