--- a/composer.json
+++ b/composer.json
@@ -28,9 +28,11 @@
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.2",
+        "drupal/admin_toolbar": "~1.0",
         "drupal/console": "~1.0",
         "drupal/core": "~8.3.0",
         "drupal/commerce": "~2.0",
+        "drupal/search_api": "~1.0",
         "drupal/swiftmailer": "~1.0",
         "drupalcommerce/commerce_base": "dev-8.x-1.x",
         "webflo/drupal-finder": "^0.3.0",
