Update version GPL-2.0+ is deprecated.

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "drupalcommerce/project-base",
     "description": "Commerce 2.x project template",
     "type": "project",
-    "license": "GPL-2.0+",
+    "license": "GPL-2.0-or-later",
     "authors": [
         {
             "name": "",
