--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         "drupal-composer/drupal-scaffold": "^2.2",
         "drupal/admin_toolbar": "~1.0",
         "drupal/console": "~1.0",
-        "drupal/core": "~8.4",
+        "drupal/core": "~8.5",
         "drupal/commerce": "~2.0",
         "drupal/search_api": "~1.0",
         "drupal/swiftmailer": "~1.0",
@@ -45,13 +45,7 @@
         "webmozart/path-util": "^2.3"
     },
     "require-dev": {
-        "behat/mink": "1.7.x-dev",
-        "behat/mink-goutte-driver": "~1.2",
-        "jcalderonzumba/gastonjs": "~1.0.2",
-        "jcalderonzumba/mink-phantomjs-driver": "~0.3.1",
-        "mikey179/vfsstream": "~1.2",
-        "phpunit/phpunit": ">=4.8.35 <5",
-        "symfony/css-selector": "~3.2.8"
+        "webflo/drupal-core-require-dev": "~8.4"
     },
     "conflict": {
         "drupal/drupal": "*"
