Throw error on patch failure
Added composer.json setting to throw an error on patch failures.

--- a/composer.json
+++ b/composer.json
@@ -98,6 +98,7 @@
             "drush/contrib/{$name}": [
                 "type:drupal-drush"
             ]
-        }
+        },
+        "composer-exit-on-patch-failure": true,
     }
 }
