--- a/composer.json
+++ b/composer.json
@@ -33,13 +33,13 @@
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6.5",
         "drupal-composer/drupal-scaffold": "^2.5",
-        "drupal/admin_toolbar": "~1.0",
+        "drupal/admin_toolbar": "^2.0",
         "drupal/console": "^1.0.2",
         "drupal/core": "^8.7.0",
-        "drupal/commerce": "~2.0",
-        "drupal/search_api": "~1.0",
-        "drupal/swiftmailer": "~1.0",
-        "drupal/token": "~1.0",
+        "drupal/commerce": "^2.0",
+        "drupal/search_api": "^1.0",
+        "drupal/swiftmailer": "^1.0",
+        "drupal/token": "^1.0",
         "drupalcommerce/commerce_base": "dev-8.x-1.x",
         "oomphinc/composer-installers-extender": "^1.1",
         "webflo/drupal-finder": "^1.0.0",
