--- a/composer.json
+++ b/composer.json
@@ -28,25 +28,25 @@
         "sort-packages": true
     },
     "require": {
-        "php": ">=7.0.8",
+        "php": ">=7.1",
         "ext-curl": "*",
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6.5",
-        "drupal/console": "^1.0.2",
-        "drupal/core": "^8.8.0",
-        "drupal/core-composer-scaffold": "^8.8.0",
+        "drupal/core": "^8.9.0",
+        "drupal/core-composer-scaffold": "^8.9.0",
         "drupal/commerce": "^2.0",
         "drupal/search_api": "^1.0",
         "drupal/swiftmailer": "^2.0",
         "drupal/token": "^1.0",
         "drupalcommerce/commerce_base": "dev-8.x-1.x",
-        "oomphinc/composer-installers-extender": "^1.1",
+        "drush/drush": "^9.7.1 | ^10.0.0",
+        "oomphinc/composer-installers-extender": "^2.0",
         "webflo/drupal-finder": "^1.0.0",
-        "webmozart/path-util": "^2.3",
-        "zaporylie/composer-drupal-optimizations": "^1.0"
+        "webmozart/path-util": "^2.3"
     },
     "require-dev": {
-        "drupal/core-dev": "^8.8.0"
+        "drupal/core-dev": "^8.9.0",
+        "zaporylie/composer-drupal-optimizations": "^1.1"
     },
     "conflict": {
         "drupal/drupal": "*"
