--- a/composer.json
+++ b/composer.json
@@ -37,9 +37,10 @@
         "ext-curl": "*",
         "composer/installers": "^2.1",
         "cweagans/composer-patches": "^1.7",
-        "drupal/core": "^10",
+        "drupal/commerce": "^2.36",
         "drupal/core-composer-scaffold": "^10",
-        "drupal/commerce": "^2.32",
+        "drupal/core-project-message": "^10",
+        "drupal/core-recommended": "^10",
         "drupal/search_api": "^1.28",
         "drupal/symfony_mailer": "^1.0@beta",
         "drupal/token": "^1.11",
